--- a/BankAccountStatementConverter.csproj
+++ b/BankAccountStatementConverter.csproj
@@ -121,10 +121,15 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountStatement.cs" />
+    <Compile Include="IAccountStatement.cs" />
+    <Compile Include="RaibaAccountStatement.cs" />
+    <Compile Include="IDeposit.cs" />
+    <Compile Include="ITransaction.cs" />
+    <Compile Include="IWithdrawal.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Transaction.cs" />
+    <Compile Include="RaibaDeposit.cs" />
+    <Compile Include="RaibaWithdrawal.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
